--- a/src/app/components/details/mount-detail/mount-detail.component.html
+++ b/src/app/components/details/mount-detail/mount-detail.component.html
@@ -1,11 +1,11 @@
 <div class="remote-details" *ngIf="selectedRemote">
     <div class="remote-header">
-        <h2 matTooltip="{{ selectedRemote.remoteSpecs?.['name'] }}">
-            {{ selectedRemote.remoteSpecs?.['name'] }}
+        <h2 matTooltip="{{ selectedRemote.remoteSpecs.name }}">
+            {{ selectedRemote.remoteSpecs.name }}
         </h2>
         <p>
-            <mat-icon [svgIcon]="iconService.getIconName(selectedRemote.remoteSpecs?.['type'])"></mat-icon>
-            {{ selectedRemote.remoteSpecs?.['type'] | titlecase }}
+            <mat-icon [svgIcon]="iconService.getIconName(selectedRemote.remoteSpecs.type)"></mat-icon>
+            {{ selectedRemote.remoteSpecs.type | titlecase }}
         </p>
     </div>
 
