Refactor tray management and enhance bandwidth limit functionality
- Removed the TrayEnabled struct and its usage in the tray module.
- Updated RcloneState to include fields for tray and notification management.
- Implemented set_bandwidth_limit and get_bandwidth_limit commands in the Rclone API.
- Enhanced the HomeComponent to handle disk usage loading states and not supported scenarios.
- Improved the MountDetailComponent to display loading states for disk usage.
- Updated the sidebar and operation detail components for better status indication.
- Refined styles in custom theme and component styles for consistency and clarity.
- Added blur event handling for input fields in preferences modal to update settings.

--- a/src/app/components/details/mount-detail/mount-detail.component.html
+++ b/src/app/components/details/mount-detail/mount-detail.component.html
@@ -16,15 +16,17 @@
             <mat-card-content class="disk-usage">
                 <strong>Space Allocation</strong>
                 <div class="full-bar disk-usage-bar" [ngStyle]="getDiskBarStyle()">
-                    <p *ngIf="!selectedRemote.mountState?.mounted || selectedRemote.mountState?.mounted === 'error'">
-                        {{ selectedRemote.mountState?.mounted === 'error' ? 'Error' : 'Not Mounted' }}
+                    <p
+                        *ngIf="!selectedRemote.mountState?.mounted || selectedRemote.mountState?.mounted === 'error' || selectedRemote.mountState?.diskUsage?.notSupported">
+                        {{ selectedRemote.mountState?.diskUsage?.notSupported ? 'Not Supported' :
+                        (selectedRemote.mountState?.mounted === 'error' ? 'Error' : 'Not Mounted') }}
                     </p>
-                    <div *ngIf="selectedRemote.mountState?.mounted && selectedRemote.mountState?.mounted !== 'error'" class="usage"
-                        [style.width]="getUsagePercentage() + '%'">
+                    <div *ngIf="selectedRemote.mountState?.mounted && selectedRemote.mountState?.mounted !== 'error'"
+                        class="usage" [style.width]="getUsagePercentage() + '%'">
                     </div>
                 </div>
 
-                <div class="legend" *ngIf="selectedRemote.mountState?.mounted && selectedRemote.mountState?.diskUsage">
+                <div class="legend" *ngIf="selectedRemote.mountState?.mounted && selectedRemote.mountState?.diskUsage && !selectedRemote.mountState?.diskUsage?.notSupported">
                     <div class="legend-item">
                         <span class="color-box border"></span>
                         Total Space: {{ selectedRemote.mountState?.diskUsage?.total_space }}
@@ -43,7 +45,8 @@
             <mat-divider></mat-divider>
 
             <mat-card-footer class="button-container">
-                <ng-container *ngIf="selectedRemote.mountState?.mounted && selectedRemote.mountState?.mounted !== 'error'">
+                <ng-container
+                    *ngIf="selectedRemote.mountState?.mounted && selectedRemote.mountState?.mounted !== 'error'">
                     <button mat-raised-button [disabled]="actionInProgress === 'open'" color="accent"
                         (click)="triggerOpenInFiles()">
                         <mat-spinner *ngIf="actionInProgress === 'open'" diameter="20"></mat-spinner>
