--- a/src/app/components/details/mount-detail/mount-detail.component.scss
+++ b/src/app/components/details/mount-detail/mount-detail.component.scss
@@ -165,7 +165,7 @@
         }
 
         .border {
-          background-color: #70caf2;
+          background-color: var(--light-blue);
         }
       }
 
