--- a/src/app/components/details/operation-detail/operation-detail.component.scss
+++ b/src/app/components/details/operation-detail/operation-detail.component.scss
@@ -196,9 +196,18 @@
           background: rgba(255, 152, 0, 0.1);
           color: var(--orange);
 
-          &.active {
+          &.active-sync {
             background: rgba(66, 133, 244, 0.1);
             color: var(--primary-color);
+
+            mat-icon {
+              animation: spin 2s linear infinite;
+            }
+          }
+
+          &.active-copy {
+            background: rgba(66, 133, 244, 0.1);
+            color: var(--accent-color);
 
             mat-icon {
               animation: spin 2s linear infinite;
